--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -1,15 +1,16 @@
     .form-container{
-        margin: 5rem 6rem;
+        margin: 7rem 6rem;
         height: 90vh;
     }
-    .heading-div h1{
-        text-align: center;
+    .form-container h1{
+        font-size: 2.5rem;
     }
     .form-container form{
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
-        height: 90vh;
+        height: 80vh;
+        padding-top: 0.8rem;
         
         
     }
@@ -24,7 +25,7 @@
         font-size: larger;
         height:3rem;
         padding: 0 1rem;
-        margin-bottom: 1.6rem;
+        margin-bottom: 0.5rem;
         border-radius: .3rem;
         border:1px solid black;
     
@@ -36,34 +37,14 @@
         font-size: 1.2rem;
         font-weight: 600;
         display: block;
-        padding: 7px;
-        margin: 2rem auto;
+        cursor: pointer;
+        padding: 0.6rem 0.4rem;
+        margin: 0.5rem auto;
     }
     .btn:hover{
         background-color: black;
         color: white;
     }
-    
-    /* .messages{
-        display: flex;
-        justify-content: center;
-    }
-    
-    .error{
-        text-align: center;
-        color: rgb(238, 0, 0);
-        width: fit-content;
-        height: 50px;
-        padding: 5px;
-    }
-    
-    
-    .success{
-    color: rgb(0, 165, 14);
-    width: fit-content;
-    height: 50px;
-    padding: 5px;
-    } */
 @media screen and (max-width:750px) {
     .form-container{
         margin: 8.5rem 2rem
