--- a/src/components/destination.css
+++ b/src/components/destination.css
@@ -87,6 +87,16 @@
         flex-direction: column-reverse;
         margin-top: 3rem;
     }
+    .des-3{
+        display: flex;
+        flex-direction: column-reverse;
+        margin-top: 3rem;
+    }
+    .des-4{
+        display: flex;
+        flex-direction: column-reverse;
+        margin-top: 3rem;
+    }
     .des-img{
         margin-bottom: 6rem;
         width: 100%;
